# gpt4-site-generator

./: Cargo.toml  README.md
src/: main.rs
src/cache_client/: cache_client.rs  mod.rs
src/chat_client/: chat_client.rs  gpt_chat.rs  mod.rs
src/openai_client/: client.rs  mod.rs  models.rs
